--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,19 @@
-/* Elimina el color de fondo para todos los elementos */
 * {
     margin: 0;
     padding: 0;
 }
+/* BOTON HAMBURGUESA */
+.navbar-toggler {
+    background-color: grey;
+}
 
 
+
+/* INDEX */
 .bodyIndex {
     background-color: hsl(87, 22%, 90%);
     font-family: "nunito", sans-serif;
-    background-image: linear-gradient(to bottom, #383838, rgb(31, 22, 8));
+    background-image: linear-gradient(to bottom, #8c8274, rgb(205, 200, 188));
 }
 
 .contenedor {
@@ -25,13 +30,12 @@
 
 .headerIndex {
     height: 100vh;
-    background-image: linear-gradient(to right, rgba(73, 59, 36, 0.264) 0%, rgba(222, 149, 31, 0) 100%), url(../recursos/estanciaInicio0.jpg);
+    background-image: linear-gradient(to right, rgba(71, 68, 63, 0.058) 0%, rgba(67, 64, 59, 0.169) 100%), url(../recursos/estanciaInicio0.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
 }
-
 
 .tituloInicio {
     text-align: center;
@@ -45,14 +49,15 @@
     margin-top: 20px;
     font-weight: 600;
     font-size: 36px;
-
 }
-.subtituloBienven{
-    color: #a69178;
+
+.subtituloBienven {
+    color: #573e1f;
     font-size: 50px;
 }
-.parrafoInicio{
-    color: #af9e8a;
+
+.parrafoInicio {
+    color: #5e3d18;
     font-size: 30px;
 }
 
@@ -69,34 +74,24 @@
 .gridIndex {
     display: grid;
     margin-top: 50px;
-    /* Ajusta el margen superior */
     gap: 20px;
-    /* Espacio entre elementos */
     justify-content: center;
-    /* Centra horizontalmente los elementos */
     text-align: center;
-    /* Centra el contenido de texto */
     grid-template-columns: repeat(3, minmax(100px, 1fr));
-    /* Divide en tres columnas iguales */
 }
 
 .img1 img,
 .img2 img,
 .img3 img {
     width: 100%;
-    /* Ajusta el ancho de la imagen al 100% del contenedor */
     max-width: 400px;
-    /* Ancho máximo de la imagen */
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-    /* Agrega una sombra */
 }
 
 .texto1 {
     max-width: 80%;
-    /* Ancho máximo para el contenedor de texto */
     margin: 20px auto;
-    /* Ajusta el margen para centrar el texto horizontalmente */
     text-align: center;
     margin-top: 80px;
     margin-bottom: 80px;
@@ -106,59 +101,42 @@
     font-size: 40px;
 }
 
-.parrafoInicio {
-    font-size: 20px;
-}
-
 /* QUIENES SOMOS */
+
 .subtituloQuienesSomos {
     text-align: center;
     margin-top: 30px;
 }
 
 .bodyQuienesSomos {
-    background-color: #f5f5dc;
-    /* Beige suave */
-
+    background-color: #ded4c6;
     position: absolute;
     max-width: 100%;
-    
 }
 
 .tituloQuinesSomos {
     margin-top: 20px;
     display: flex;
     justify-content: center;
-    /* Centra horizontalmente el contenido */
     align-items: center;
-    /* Centra verticalmente el contenido */
     text-align: center;
-    /* Asegura que el texto esté centrado dentro del contenedor flex */
     font-size: 40px;
     color: #3b2e1f;
-    /* Marrón oscuro */
 }
 
 .parrafoQuienesSomos {
     margin: 50px;
     font-size: 20px;
     color: #3b2e1f;
-    /* Marrón oscuro */
 }
 
 .imagenFlores {
     display: block;
-    /* Cambiamos a block para centrar correctamente */
     margin-left: auto;
-    /* Centra horizontalmente */
     margin-right: auto;
-    /* Centra horizontalmente */
     width: 400px;
     box-shadow: 0 20px 20px rgba(0, 0, 0, 0.5);
-    /* Añadimos sombra */
     border: 1px solid #3b2e1f;
-    /* Marrón oscuro */
-    /* Añadimos bordes */
     border-radius: 10px;
 }
 
@@ -166,23 +144,39 @@
     margin: 50px;
     font-size: 20px;
     color: #3b2e1f;
-    /* Marrón oscuro */
     text-indent: 20px;
-    /* Establece una sangría de 20px solo en el primer párrafo */
 }
 
 .parrafoQuienesSomos {
     margin: 50px;
     font-size: 20px;
     color: #3b2e1f;
-    /* Marrón oscuro */
     text-indent: 20px;
-    /* Establece una sangría de 20px para cada párrafo */
 }
 
 .parrafoQuienesSomos>p:first-child {
     text-indent: 20px;
-    /* Establece una sangría de 20px al principio de cada primer párrafo hijo dentro de .parrafoQuienesSomos */
+}
+
+.contenedorCaja {
+    text-align: center;
+}
+
+.caja {
+    margin-top: 80px;
+    display: inline-block;
+    background-color: #f0f0f0;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.contenedorQuienesSomos {
+    padding: 20px;
+    border-radius: 10px;
+    background-image: linear-gradient(to bottom, #ded4c6, #8e8474); /* Gradiente de color */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra */
+    border: rgba(0, 0, 0, 0.1); /* Borde */
 }
 
 /* Galeria de imagenes */
@@ -196,52 +190,109 @@
     margin-bottom: 20px;
 }
 
-
-
 /* -------SERVICIO-------- */
-.bodyServicios{
-    background-image: linear-gradient(to bottom, #383838, rgb(31, 22, 8));
-    
+.bodyServicios {
+    background-image: linear-gradient(to bottom, #544d41, rgb(160, 135, 96));
+    max-width: 100%;
 }
+
 .servicio {
     margin-bottom: 40px;
     margin: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 .tituloServicios {
-    color: #a69178;
+    color: #b2a392;
     margin: 20px;
     text-align: center;
+    display: block;
+    background-color: #3b2e1f3e;
+    margin: 30px;
+    font-size: 24px;
 }
 
 .servicio h2 {
     text-align: center;
     font-size: 32px;
     color: #ba5a01;
-    /* Color de texto oscuro */
 }
 
 .servicio p {
     text-align: center;
     font-size: 20px;
     color: #c0c0c0;
-    /* Color de texto gris */
 }
 
 .imagenesServicio {
     display: flex;
     justify-content: space-evenly;
-    img {
-        width: 300px;
-        border-radius: 5px;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
-    }
 }
 
+.imagenesServicio img {
+    width: 300px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
+}
 
+/* CONTACTO */
+.bodyContacto {
+    background-color: #8c8274;
+}
+
+.contenedorContacto {
+    background-color: #f7f7f7;
+    padding: 60px 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 800px;
+    margin: auto;
+    margin-top: 150px;
+    margin-bottom: 200px;
+}
+
+.tituloContacto {
+    color: #403830;
+    font-size: 36px;
+    margin-bottom: 40px;
+}
+
+.contactoInfo {
+    max-width: 600px;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.contactoInfo p {
+    color: #af9e8a;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.redesContacto {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.redesContacto a {
+    text-decoration: none;
+    color: #af9e8a;
+}
+
+.redesContacto p {
+    margin-bottom: 10px;
+}
 
 /* FOOTER */
-
 .footerRedes {
     background-color: rgba(82, 44, 16, 0.549);
 }
@@ -279,59 +330,52 @@
     left: 0;
     width: 100%;
     background-color: rgba(82, 44, 16, 0.549);
-    /* Color de fondo del footer */
     padding: 10px;
-    /* Espaciado interno del footer */
     text-align: center;
-    /* Alineación del texto del footer */
     z-index: 999;
-    /* Asegura que el footer esté sobre otros elementos */
 }
 
 main {
     flex-grow: 1;
-    /* El contenido principal ocupa todo el espacio disponible */
 }
 
 footer {
     width: 100%;
-    background-color: rgba(82, 44, 16, 0.549);
+    background-color: rgba(86, 57, 36, 0.549);
     padding: 10px;
     text-align: center;
     margin-top: auto;
-    /* Empuja el footer hacia abajo, al final de la página */
 }
+
 .footer-fixed-servicios {
     margin-top: 60px;
     bottom: 0;
     left: 0;
     width: 100%;
     background-color: rgba(50, 22, 0, 0.626);
-    /* Color de fondo del footer */
     padding: 10px;
-    /* Espaciado interno del footer */
     text-align: center;
-    /* Alineación del texto del footer */
     z-index: 999;
-    /* Asegura que el footer esté sobre otros elementos */
 }
-.h3FooterServicios{
+
+.h3FooterServicios {
     color: #af9e8a;
 }
-.h4FooterServicios{
+
+.h4FooterServicios {
     color: #a69178;
 }
+
 .footerTexto {
     color: white;
     font-size: 14px;
     text-align: center;
-    /* Ajusta cualquier otra propiedad según sea necesario */
 }
-.logoLaMorena{
-    img{
+
+.logoLaMorena img {
     background-image: black;
 }
-}
+
 /* Media query para dispositivos celulares */
 @media only screen and (max-width: 767px) {
     .contenedor {
@@ -387,6 +431,7 @@ footer {
     }
 }
 
+
 /* Media query para tablets */
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
     .contenedor {
@@ -433,5 +478,96 @@ footer {
 
     .carrusel {
         margin: 0 auto;
+    }
+}
+/* MEDIAQUERYS PARA SERVICIOS */
+/* Media query para dispositivos móviles */
+@media only screen and (max-width: 767px) {
+    /* Ajustes específicos para el header */
+    .headerIndex {
+        padding-top: 20px; /* Ajusta el espacio superior del header */
+    }
+
+    /* Ajustes específicos para las imágenes */
+    .bodyServicios .imagenesServicio {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .bodyServicios .imagenesServicio img {
+        max-width: 80%; /* Ajusta el tamaño máximo de las imágenes */
+        height: auto; /* Evita que las imágenes se distorsionen */
+        margin-bottom: 20px; /* Agrega un espacio entre las imágenes */
+    }
+}
+
+/* Media query para tablets */
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+    /* Ajustes específicos para el header */
+    .headerIndex {
+        padding-top: 30px; /* Ajusta el espacio superior del header */
+    }
+
+    /* Ajustes específicos para las imágenes */
+    .bodyServicios .imagenesServicio {
+        display: flex;
+        justify-content: center;
+    }
+
+    .bodyServicios .imagenesServicio img {
+        max-width: 80%; /* Ajusta el tamaño máximo de las imágenes */
+        height: auto; /* Evita que las imágenes se distorsionen */
+        margin-right: 20px; /* Agrega un espacio entre las imágenes */
+    }
+}
+/* MEDIAS QUERYS CONTACTO */
+/* Media query para dispositivos celulares */
+@media only screen and (max-width: 767px) {
+    .contenedorContacto {
+        padding: 20px;
+        margin: 20px;
+    }
+
+    .tituloContacto {
+        font-size: 30px;
+    }
+
+    .contactoInfo p {
+        font-size: 16px;
+    }
+
+    .redesContacto {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .redesContacto a {
+        display: inline-block; /* Alinear los enlaces horizontalmente */
+    }
+
+    .redesContacto p {
+        margin-bottom: 0; /* Eliminar el margen inferior para los párrafos */
+    }
+}
+
+/* Media query para tablets */
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+    .contenedorContacto {
+        max-width: 768px;
+        padding: 20px;
+    }
+
+    .tituloContacto {
+        font-size: 40px;
+    }
+
+    .contactoInfo p {
+        font-size: 18px;
+    }
+
+    .redesContacto {
+        gap: 20px;
     }
 }
